Add breadcrumbservice as bean in AbstractControllerTest Call PathfinderEntityNotFoundException